Merge branch 'apps-7342' into 'main'
APPS-7342 Make Row, Column, ColumnName undefined instead of throwing

See merge request ggb/geogebra!10328

GitOrigin-RevId: 97514d4c5f511810b933752011ea47d755f6a142